test/typecheck/fail/duplicate_ctor.sail
union foo1 = { Bar1 : int }

union foo2 = { Bar1 : int }